libqt6c/src/libqjsonvalue.hpp

typedef struct QJsonArray QJsonArray;
typedef struct QJsonObject QJsonObject;
typedef struct QJsonValue QJsonValue;
typedef struct QJsonValueConstRef QJsonValueConstRef;
typedef struct QVariant QVariant;
QJsonValue* QJsonValue_new();
QJsonValue* QJsonValue_new2(bool b);
QJsonValue* QJsonValue_new3(double n);
QJsonValue* QJsonValue_new4(int n);
QJsonValue* QJsonValue_new5(long long v);
QJsonValue* QJsonValue_new6(const libqt_string s);
QJsonValue* QJsonValue_new7(const char* s);
QJsonValue* QJsonValue_new8(const QJsonArray* a);
QJsonValue* QJsonValue_new9(const QJsonObject* o);
QJsonValue* QJsonValue_new10(const QJsonValue* other);
QJsonValue* QJsonValue_new11(int param1);
void QJsonValue_OperatorAssign(QJsonValue* self, const QJsonValue* other);
void QJsonValue_Swap(QJsonValue* self, QJsonValue* other);
QJsonValue* QJsonValue_FromVariant(const QVariant* variant);
QVariant* QJsonValue_ToVariant(const QJsonValue* self);
int QJsonValue_Type(const QJsonValue* self);
bool QJsonValue_IsNull(const QJsonValue* self);
bool QJsonValue_IsBool(const QJsonValue* self);
bool QJsonValue_IsDouble(const QJsonValue* self);
bool QJsonValue_IsString(const QJsonValue* self);
bool QJsonValue_IsArray(const QJsonValue* self);
bool QJsonValue_IsObject(const QJsonValue* self);
bool QJsonValue_IsUndefined(const QJsonValue* self);
bool QJsonValue_ToBool(const QJsonValue* self);
int QJsonValue_ToInt(const QJsonValue* self);
long long QJsonValue_ToInteger(const QJsonValue* self);
double QJsonValue_ToDouble(const QJsonValue* self);
libqt_string QJsonValue_ToString(const QJsonValue* self);
libqt_string QJsonValue_ToString2(const QJsonValue* self, const libqt_string defaultValue);
QJsonArray* QJsonValue_ToArray(const QJsonValue* self);
QJsonArray* QJsonValue_ToArray2(const QJsonValue* self, const QJsonArray* defaultValue);
QJsonObject* QJsonValue_ToObject(const QJsonValue* self);
QJsonObject* QJsonValue_ToObject2(const QJsonValue* self, const QJsonObject* defaultValue);
QJsonValue* QJsonValue_OperatorSubscript(const QJsonValue* self, const libqt_string key);
QJsonValue* QJsonValue_OperatorSubscript4(const QJsonValue* self, ptrdiff_t i);
bool QJsonValue_OperatorEqual(const QJsonValue* self, const QJsonValue* other);
bool QJsonValue_OperatorNotEqual(const QJsonValue* self, const QJsonValue* other);
bool QJsonValue_ToBool1(const QJsonValue* self, bool defaultValue);
int QJsonValue_ToInt1(const QJsonValue* self, int defaultValue);
long long QJsonValue_ToInteger1(const QJsonValue* self, long long defaultValue);
double QJsonValue_ToDouble1(const QJsonValue* self, double defaultValue);
void QJsonValue_Delete(QJsonValue* self);