QtBeef/src/Qt/qjsonvalue.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QJsonValue
// --------------------------------------------------------------
[CRepr]
struct QJsonValue_Ptr: void
{
}
extension CQt
{
	[LinkName("QJsonValue_new")]
	public static extern QJsonValue_Ptr* QJsonValue_new();
	[LinkName("QJsonValue_new2")]
	public static extern QJsonValue_Ptr* QJsonValue_new2(bool b);
	[LinkName("QJsonValue_new3")]
	public static extern QJsonValue_Ptr* QJsonValue_new3(double n);
	[LinkName("QJsonValue_new4")]
	public static extern QJsonValue_Ptr* QJsonValue_new4(c_int n);
	[LinkName("QJsonValue_new5")]
	public static extern QJsonValue_Ptr* QJsonValue_new5(c_longlong v);
	[LinkName("QJsonValue_new6")]
	public static extern QJsonValue_Ptr* QJsonValue_new6(libqt_string* s);
	[LinkName("QJsonValue_new7")]
	public static extern QJsonValue_Ptr* QJsonValue_new7(c_char* s);
	[LinkName("QJsonValue_new8")]
	public static extern QJsonValue_Ptr* QJsonValue_new8(QJsonArray_Ptr* a);
	[LinkName("QJsonValue_new9")]
	public static extern QJsonValue_Ptr* QJsonValue_new9(QJsonObject_Ptr* o);
	[LinkName("QJsonValue_new10")]
	public static extern QJsonValue_Ptr* QJsonValue_new10(QJsonValue_Ptr* other);
	[LinkName("QJsonValue_new11")]
	public static extern QJsonValue_Ptr* QJsonValue_new11(QJsonValue_Type param1);
	[LinkName("QJsonValue_Delete")]
	public static extern void QJsonValue_Delete(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_OperatorAssign")]
	public static extern void QJsonValue_OperatorAssign(QJsonValue_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValue_Swap")]
	public static extern void QJsonValue_Swap(QJsonValue_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValue_FromVariant")]
	public static extern QJsonValue_Ptr QJsonValue_FromVariant(QVariant_Ptr* variant);
	[LinkName("QJsonValue_ToVariant")]
	public static extern QVariant_Ptr QJsonValue_ToVariant(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_Type")]
	public static extern QJsonValue_Type QJsonValue_Type(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_IsNull")]
	public static extern bool QJsonValue_IsNull(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_IsBool")]
	public static extern bool QJsonValue_IsBool(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_IsDouble")]
	public static extern bool QJsonValue_IsDouble(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_IsString")]
	public static extern bool QJsonValue_IsString(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_IsArray")]
	public static extern bool QJsonValue_IsArray(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_IsObject")]
	public static extern bool QJsonValue_IsObject(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_IsUndefined")]
	public static extern bool QJsonValue_IsUndefined(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToBool")]
	public static extern bool QJsonValue_ToBool(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToInt")]
	public static extern c_int QJsonValue_ToInt(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToInteger")]
	public static extern c_longlong QJsonValue_ToInteger(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToDouble")]
	public static extern double QJsonValue_ToDouble(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToString")]
	public static extern libqt_string QJsonValue_ToString(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToString2")]
	public static extern libqt_string QJsonValue_ToString2(QJsonValue_Ptr* self, libqt_string* defaultValue);
	[LinkName("QJsonValue_ToArray")]
	public static extern QJsonArray_Ptr QJsonValue_ToArray(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToArray2")]
	public static extern QJsonArray_Ptr QJsonValue_ToArray2(QJsonValue_Ptr* self, QJsonArray_Ptr* defaultValue);
	[LinkName("QJsonValue_ToObject")]
	public static extern QJsonObject_Ptr QJsonValue_ToObject(QJsonValue_Ptr* self);
	[LinkName("QJsonValue_ToObject2")]
	public static extern QJsonObject_Ptr QJsonValue_ToObject2(QJsonValue_Ptr* self, QJsonObject_Ptr* defaultValue);
	[LinkName("QJsonValue_OperatorSubscript")]
	public static extern QJsonValue_Ptr QJsonValue_OperatorSubscript(QJsonValue_Ptr* self, libqt_string* key);
	[LinkName("QJsonValue_OperatorSubscript4")]
	public static extern QJsonValue_Ptr QJsonValue_OperatorSubscript4(QJsonValue_Ptr* self, void* i);
	[LinkName("QJsonValue_OperatorEqual")]
	public static extern bool QJsonValue_OperatorEqual(QJsonValue_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValue_OperatorNotEqual")]
	public static extern bool QJsonValue_OperatorNotEqual(QJsonValue_Ptr* self, QJsonValue_Ptr* other);
	[LinkName("QJsonValue_ToBool1")]
	public static extern bool QJsonValue_ToBool1(QJsonValue_Ptr* self, bool defaultValue);
	[LinkName("QJsonValue_ToInt1")]
	public static extern c_int QJsonValue_ToInt1(QJsonValue_Ptr* self, c_int defaultValue);
	[LinkName("QJsonValue_ToInteger1")]
	public static extern c_longlong QJsonValue_ToInteger1(QJsonValue_Ptr* self, c_longlong defaultValue);
	[LinkName("QJsonValue_ToDouble1")]
	public static extern double QJsonValue_ToDouble1(QJsonValue_Ptr* self, double defaultValue);
}
class QJsonValue
{
	private QJsonValue_Ptr* ptr;
	public this()
	{
		this.ptr = CQt.QJsonValue_new();
	}
	public this(bool b)
	{
		this.ptr = CQt.QJsonValue_new2(b);
	}
	public this(double n)
	{
		this.ptr = CQt.QJsonValue_new3(n);
	}
	public this(c_int n)
	{
		this.ptr = CQt.QJsonValue_new4(n);
	}
	public this(c_longlong v)
	{
		this.ptr = CQt.QJsonValue_new5(v);
	}
	public this(libqt_string* s)
	{
		this.ptr = CQt.QJsonValue_new6(s);
	}
	public this(c_char* s)
	{
		this.ptr = CQt.QJsonValue_new7(s);
	}
	public this(QJsonArray_Ptr* a)
	{
		this.ptr = CQt.QJsonValue_new8(a);
	}
	public this(QJsonObject_Ptr* o)
	{
		this.ptr = CQt.QJsonValue_new9(o);
	}
	public this(QJsonValue_Ptr* other)
	{
		this.ptr = CQt.QJsonValue_new10(other);
	}
	public this(QJsonValue_Type param1)
	{
		this.ptr = CQt.QJsonValue_new11(param1);
	}
	public ~this()
	{
		CQt.QJsonValue_Delete(this.ptr);
	}
	public void Swap(QJsonValue_Ptr* other)
	{
		CQt.QJsonValue_Swap(this.ptr, other);
	}
	public QJsonValue_Ptr FromVariant(QVariant_Ptr* variant)
	{
		return CQt.QJsonValue_FromVariant(variant);
	}
	public QVariant_Ptr ToVariant()
	{
		return CQt.QJsonValue_ToVariant(this.ptr);
	}
	public QJsonValue_Type Type()
	{
		return CQt.QJsonValue_Type(this.ptr);
	}
	public bool IsNull()
	{
		return CQt.QJsonValue_IsNull(this.ptr);
	}
	public bool IsBool()
	{
		return CQt.QJsonValue_IsBool(this.ptr);
	}
	public bool IsDouble()
	{
		return CQt.QJsonValue_IsDouble(this.ptr);
	}
	public bool IsString()
	{
		return CQt.QJsonValue_IsString(this.ptr);
	}
	public bool IsArray()
	{
		return CQt.QJsonValue_IsArray(this.ptr);
	}
	public bool IsObject()
	{
		return CQt.QJsonValue_IsObject(this.ptr);
	}
	public bool IsUndefined()
	{
		return CQt.QJsonValue_IsUndefined(this.ptr);
	}
	public bool ToBool()
	{
		return CQt.QJsonValue_ToBool(this.ptr);
	}
	public c_int ToInt()
	{
		return CQt.QJsonValue_ToInt(this.ptr);
	}
	public c_longlong ToInteger()
	{
		return CQt.QJsonValue_ToInteger(this.ptr);
	}
	public double ToDouble()
	{
		return CQt.QJsonValue_ToDouble(this.ptr);
	}
	public libqt_string ToString()
	{
		return CQt.QJsonValue_ToString(this.ptr);
	}
	public libqt_string ToString2(libqt_string* defaultValue)
	{
		return CQt.QJsonValue_ToString2(this.ptr, defaultValue);
	}
	public QJsonArray_Ptr ToArray()
	{
		return CQt.QJsonValue_ToArray(this.ptr);
	}
	public QJsonArray_Ptr ToArray2(QJsonArray_Ptr* defaultValue)
	{
		return CQt.QJsonValue_ToArray2(this.ptr, defaultValue);
	}
	public QJsonObject_Ptr ToObject()
	{
		return CQt.QJsonValue_ToObject(this.ptr);
	}
	public QJsonObject_Ptr ToObject2(QJsonObject_Ptr* defaultValue)
	{
		return CQt.QJsonValue_ToObject2(this.ptr, defaultValue);
	}
	public QJsonValue_Ptr OperatorSubscript4(void* i)
	{
		return CQt.QJsonValue_OperatorSubscript4(this.ptr, i);
	}
	public bool ToBool1(bool defaultValue)
	{
		return CQt.QJsonValue_ToBool1(this.ptr, defaultValue);
	}
	public c_int ToInt1(c_int defaultValue)
	{
		return CQt.QJsonValue_ToInt1(this.ptr, defaultValue);
	}
	public c_longlong ToInteger1(c_longlong defaultValue)
	{
		return CQt.QJsonValue_ToInteger1(this.ptr, defaultValue);
	}
	public double ToDouble1(double defaultValue)
	{
		return CQt.QJsonValue_ToDouble1(this.ptr, defaultValue);
	}
}
interface IQJsonValue
{
	public void Swap();
	public QJsonValue FromVariant();
	public QVariant ToVariant();
	public QJsonValue_Type Type();
	public bool IsNull();
	public bool IsBool();
	public bool IsDouble();
	public bool IsString();
	public bool IsArray();
	public bool IsObject();
	public bool IsUndefined();
	public bool ToBool();
	public c_int ToInt();
	public c_longlong ToInteger();
	public double ToDouble();
	public libqt_string ToString();
	public libqt_string ToString2();
	public QJsonArray ToArray();
	public QJsonArray ToArray2();
	public QJsonObject ToObject();
	public QJsonObject ToObject2();
	public QJsonValue OperatorSubscript4();
	public bool ToBool1();
	public c_int ToInt1();
	public c_longlong ToInteger1();
	public double ToDouble1();
}
// --------------------------------------------------------------
// QJsonValueConstRef
// --------------------------------------------------------------
[CRepr]
struct QJsonValueConstRef_Ptr: void
{
}
